Make sure to clone the page descriptor before changing its properties.  Also some cleanup of the GetCurrentDescriptor code.  Bug 285828, r=biesi, sr=jst